完成抽取范围功能设计

--- a/TAF.Web/Views/Purchase/_PurchaseInfoIndex.cshtml
+++ b/TAF.Web/Views/Purchase/_PurchaseInfoIndex.cshtml
@@ -41,7 +41,7 @@
                                 </li>
                                 <li class="">
                                     <a data-toggle="tab" href="#partyA" aria-expanded="false" id="ppartyA">
-                                        甲方人员
+                                        甲方代表
                                     </a>
                                 </li>
                                 <li class="">
@@ -148,7 +148,7 @@
                                         <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('设计单位','Purchase_DesignUnit')"><i class="fa  fa-plus"></i> 新增</a>
                                     </div>
                                     <div class="row">
-                                        <div class="col-md-8">
+                                        <div class="col-md-9">
                                             <table class="table table-striped table-hover table-bordered ">
                                                 <thead>
                                                 <tr role="row">
@@ -161,7 +161,7 @@
                                                     <th style="width: 200px;">
                                                         账号
                                                     </th>
-                                                    <th style="width: 500px;">
+                                                    <th style="width: 400px;">
                                                         通讯地址
                                                     </th>
                                                     <th style="width: 200px;">
@@ -187,10 +187,10 @@
                                 </div>
                             <div id="partyA" class="tab-pane ">
                                 <div class="table-toolbar">
-                                    <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('甲方单位','Purchase_PartyA')"><i class="fa  fa-plus"></i> 新增</a>
+                                    <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('甲方代表','Purchase_PartyA')"><i class="fa  fa-plus"></i> 新增</a>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-8">
+                                    <div class="col-md-9">
                                         <table class="table table-striped table-hover table-bordered ">
                                             <thead>
                                                 <tr role="row">
@@ -232,7 +232,7 @@
                                         <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('造价单位','Purchase_CostUnit')"><i class="fa  fa-plus"></i> 新增</a>
                                     </div>
                                     <div class="row">
-                                        <div class="col-md-8">
+                                        <div class="col-md-9">
                                             <table class="table table-striped table-hover table-bordered ">
                                                 <thead>
                                                     <tr role="row">
@@ -245,7 +245,7 @@
                                                         <th style="width: 200px;">
                                                             账号
                                                         </th>
-                                                        <th style="width: 500px;">
+                                                        <th style="width: 400px;">
                                                             通讯地址
                                                         </th>
                                                         <th style="width: 200px;">
@@ -274,7 +274,7 @@
                                     <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('监理单位','Purchase_ConstructionControlUnit')"><i class="fa  fa-plus"></i> 新增</a>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-8">
+                                    <div class="col-md-9">
                                         <table class="table table-striped table-hover table-bordered ">
                                             <thead>
                                                 <tr role="row">
@@ -287,7 +287,7 @@
                                                     <th style="width: 200px;">
                                                         账号
                                                     </th>
-                                                    <th style="width: 500px;">
+                                                    <th style="width: 400px;">
                                                         通讯地址
                                                     </th>
                                                     <th style="width: 200px;">
@@ -316,7 +316,7 @@
                                     <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('招标代理单位','Purchase_BiddingAgency')"><i class="fa  fa-plus"></i> 新增</a>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-8">
+                                    <div class="col-md-9">
                                         <table class="table table-striped table-hover table-bordered ">
                                             <thead>
                                                 <tr role="row">
@@ -329,7 +329,7 @@
                                                     <th style="width: 200px;">
                                                         账号
                                                     </th>
-                                                    <th style="width: 500px;">
+                                                    <th style="width: 400px;">
                                                         通讯地址
                                                     </th>
                                                     <th style="width: 200px;">
@@ -358,7 +358,7 @@
                                     <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('评标专家','Purchase_Expert')"><i class="fa  fa-plus"></i> 新增</a>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-8">
+                                    <div class="col-md-9">
                                         <table class="table table-striped table-hover table-bordered ">
                                             <thead>
                                                 <tr role="row">
@@ -371,7 +371,7 @@
                                                     <th style="width: 200px;">
                                                         资质
                                                     </th>
-                                                    <th style="width: 500px;">
+                                                    <th style="width: 300px;">
                                                         资质证书号码
                                                     </th>
                                                     <th style="width: 200px;">
@@ -437,10 +437,10 @@
                                                 <th style="width: 200px;">
                                                     等级
                                                 </th>
-                                                <th style="width: 200px;">
+                                                <th style="width: 100px;">
                                                     区间下限
                                                 </th>
-                                                <th style="width: 200px;">
+                                                <th style="width: 100px;">
                                                     区间上限
                                                 </th>
                                                 
