--- a/TAF.Web/Views/ProcurementPlan/_ProcurementPlanIndex1.cshtml
+++ b/TAF.Web/Views/ProcurementPlan/_ProcurementPlanIndex1.cshtml
@@ -3,7 +3,7 @@
     <div class="col-xs-12 col-md-12">
         <div class="widget">
             <div class="widget-header bordered-bottom bordered-primary">
-                <span class="widget-caption">采购计划</span>
+                <span class="widget-caption">采购计划调整</span>
             </div>
             <div class="widget-body">
                 <div class="table-toolbar">
@@ -27,13 +27,13 @@
                                     <th style="width: 200px;">
                                         采购项目
                                     </th>        
-                                    <th style="width: 200px;">
+                                    <th style="width: 150px;">
                                         采购时间
                                     </th>        
-                                    <th style="width: 200px;">
-                                        责任部门
+                                    <th style="width: 150px;">
+                                        责任单位
                                     </th>        
-                                    <th style="width: 200px;">
+                                    <th style="width: 150px;">
                                         责任人
                                     </th>        
                                     <th style="width: 300px;">
@@ -253,7 +253,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label class="col-sm-2 control-label no-padding-right">责任部门<span class="red">*</span></label>
+                                        <label class="col-sm-2 control-label no-padding-right">责任单位<span class="red">*</span></label>
                                         <div class="col-sm-10">
                                             <select id="editDepartment" style="width: 100%" v-model="item.department" name="department" v-validate:department="{required:true}">
                                                 <option value="">请选择...</option>
