--- a/TAF.Web/Views/ProcessManagement/_DesignManage.cshtml
+++ b/TAF.Web/Views/ProcessManagement/_DesignManage.cshtml
@@ -76,9 +76,9 @@
                                     <td>{{item.schedule}}</td>
                                     <td>
                                     <button type="button" class="btn   edit" v-on:click="showModifyDialog('编辑设计合同',item.id)"><i class="fa fa-edit"></i> 编辑</button>
-                                    <button type="button" class="btn btn-danger  " v-on:click="showDeleteDialog(item.id,item.name) " ><i class="fa fa-trash-o"></i> 删除</button>
-                                    <button type="button" class="btn btn-default  " v-on:click="showDeleteDialog(item.id,item.name) " ><i class="fa fa-trash-o"></i> 更新费用</button>
-                                    <button type="button" class="btn btn-default  " v-on:click="showDeleteDialog(item.id,item.name) " ><i class="fa  fa-paperclip"></i> 附件</button>
+                                    <button type="button" class="btn btn-default  " v-on:click="showOutlayDialog('编辑设计费用',item.id) " ><i class="fa fa-trash-o"></i> 费用</button>
+                                        <button type="button" class="btn btn-default  " v-on:click="showDeleteDialog(item.id,item.name) " ><i class="fa  fa-paperclip"></i> 附件</button>
+                                        <button type="button" class="btn btn-danger  " v-on:click="showDeleteDialog(item.id,item.name) " ><i class="fa fa-trash-o"></i> 删除</button>
                                     </td>
                                 </tr>
                             </tbody>
@@ -124,7 +124,6 @@
         </div>
     </div>
 </div>
-
 <!-- 编辑对话框 -->
 <div class="bootbox modal fade modal-primary in" id="modifyProcessManagementDialog">
     <div class="modal-dialog">
@@ -148,7 +147,7 @@
                                                 @{
                                                     foreach (var item in (List<TAF.Utility.KeyValue<Guid, string>>)ViewData["projects1"])
                                                     {
-                                                <option value="@item.Key">@item.Value</option>
+                                                        <option value="@item.Key">@item.Value</option>
                                                     }
                                                 }
                                             </select>
@@ -214,6 +213,173 @@
                 <button type="button" class="btn btn-default" data-dismiss="modal"><i class='fa   fa-mail-reply'></i>取消</button>
                 <button type="submit" class="btn btn-primary" v-on:click="save()" v-show="item.status==0"  disabled="{{!$v.valid}}" ><i class='fa    fa-floppy-o'></i>保存 </button>
                 <button type="submit" class="btn btn-default" v-on:click="print()"  disabled="{{!$v.valid}}" ><i class='fa    fa-print'></i>打印合同</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="bootbox modal fade modal-primary in" id="updateOutlayDialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title">{{ modifyEntity.modifyTitle }}</h4>
+                <div v-model="title"></div>
+            </div>
+            <div class="modal-body">
+                <div id="form">
+                    <validator name="v">
+                        <form class="form-horizontal " name="form" novalidate>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label no-padding-right">合同设计费<span class="red">*</span></label>
+                                        <div class="col-sm-10">
+                                            <div class="input-group">
+                                                <input type="number" class="form-control" id="price" name="price" v-model="item.price" v-validate:price="{required:true}" :disabled='item.status!==1' />
+                                                <span class="input-group-btn">
+                                                    <button class="btn btn-primary" type="button" v-on:click="savePrice()" :disabled='item.status!==1'>保存</button>
+                                                </span>
+                                            </div>
+
+
+                                            <span class="input-group-btn">
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label no-padding-right">未付款进度</label>
+                                        <div class="col-sm-10">
+                                            <input type="text" class="form-control" id="status" name="status" v-model="item.schedule" readonly="readonly" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </validator>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <table class="table table-striped table-hover table-bordered ">
+                            <thead>
+                                <tr role="row">
+
+                                    <th style="width: 200px;">
+                                        凭证号
+                                    </th>
+                                    <th style="width: 100px;">
+                                        时间
+                                    </th>
+                                    <th style="width: 100px;">
+                                        金额
+                                    </th>
+                                    <th style="width: 200px;">
+                                        摘要
+                                    </th>
+                                    <th style="width: 250px;">
+                                        操作
+                                    </th>
+                                </tr>
+                                <tr role="row">
+                                    <th>
+                                        <input type="text" class="form-control" placeholder="凭证号" v-model="queryEntity2.text" />
+                                    </th>
+                                    <th>
+                                    </th>
+                                    <th>
+                                    </th>
+                                    <th>
+                                    </th>
+                                    <th>
+                                        <button type="button" class="btn edit" v-on:click="query2(0,queryEntity2.text)"><i class="fa fa-search"></i> 搜索</button>
+                                        <button type="button" class="btn edit" v-on:click="resetSearch2()"><i class="fa fa-times"></i> 重置</button>
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr v-for="o in list2.items">
+                                    <td>{{o.voucherNo}}</td>
+                                    <td>{{o.date}}</td>
+                                    <td>{{o.amount}}</td>
+                                    <td>{{o.note}}</td>
+                                    <td>
+                                        <button type="button" class="btn   edit" v-on:click="link(o.id)"><i class="fa  fa-link"></i> 关联</button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td colspan="5" class="DTTTFooter ">
+                                        <div class="col-sm-4">
+                                            <div class="dataTables_info" id="simpledatatable_info" role="status" aria-live="polite"> {{list2.from}} - {{list2.to}} / {{list2.total}} </div>
+                                        </div>
+                                        <div class="dataTables_paginate paging_bootstrap">
+                                            <ul id="container2" class="pagination"></ul>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <table class="table table-striped table-hover table-bordered ">
+                            <thead>
+                                <tr role="row">
+
+                                    <th style="width: 200px;">
+                                        凭证号
+                                    </th>
+                                    <th style="width: 100px;">
+                                        时间
+                                    </th>
+                                    <th style="width: 100px;">
+                                        金额
+                                    </th>
+                                    <th style="width: 200px;">
+                                        摘要
+                                    </th>
+                                    <th style="width: 250px;">
+                                        操作
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr v-for="o in list3.items">
+                                    <td>{{o.voucherNo}}</td>
+                                    <td>{{o.date}}</td>
+                                    <td>{{o.amount}}</td>
+                                    <td>{{o.note}}</td>
+                                    <td>
+                                        <button type="button" class="btn   edit" v-on:click="unlink(o.id)"><i class="fa   fa-unlink"></i> 移除关联</button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td colspan="5" class="DTTTFooter ">
+                                        <div class="col-sm-4">
+                                            <div class="dataTables_info" id="simpledatatable_info" role="status" aria-live="polite"> {{list3.from}} - {{list3.to}} / {{list3.total}} </div>
+                                        </div>
+                                        <div class="col-sm-8 ">
+                                            <div class="dataTables_paginate paging_bootstrap">
+                                                <ul id="container3" class="pagination"></ul>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
             </div>
         </div>
     </div>
