--- a/TAF.Web/Views/ProcessManagement/_SupervisionManage.cshtml
+++ b/TAF.Web/Views/ProcessManagement/_SupervisionManage.cshtml
@@ -2,11 +2,11 @@
     <div class="col-xs-12 col-md-12">
         <div class="widget">
             <div class="widget-header bordered-bottom bordered-primary">
-                <span class="widget-caption">设计招标管理</span>
+                <span class="widget-caption">监理招标管理</span>
             </div>
             <div class="widget-body">
                 <div class="table-toolbar">
-                    <button type="button" class="btn btn-primary " v-on:click="showModifyDialog('新增设计合同',null)"><i class="fa  fa-plus"></i> 新增</button>
+                    <button type="button" class="btn btn-primary " v-on:click="showModifyDialog('新增监理合同',null)"><i class="fa  fa-plus"></i> 新增</button>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
@@ -23,7 +23,7 @@
                                     设计单位
                                 </th>
                                 <th style="width: 100px;">
-                                    合同设计费
+                                    监理费
                                 </th>
                                 <th style="width: 100px;">
                                     未付款进度
@@ -75,8 +75,8 @@
                                 <td>{{item.price}}</td>
                                 <td>{{item.schedule}}</td>
                                 <td>
-                                    <button type="button" class="btn   edit" v-on:click="showModifyDialog('编辑设计合同',item.id)"><i class="fa fa-edit"></i> 编辑</button>
-                                    <button type="button" class="btn btn-default  " v-on:click="showOutlayDialog('编辑设计费用',item.id) "><i class="fa  fa-yen"></i> 费用</button>
+                                    <button type="button" class="btn   edit" v-on:click="showModifyDialog('编辑监理合同',item.id)"><i class="fa fa-edit"></i> 编辑</button>
+                                    <button type="button" class="btn btn-default  " v-on:click="showOutlayDialog('编辑监理费用',item.id) "><i class="fa  fa-yen"></i> 费用</button>
                                     <button type="button" class="btn btn-default  " v-on:click="showAttachmentsDialog('附件管理',item.id) "><i class="fa  fa-paperclip"></i> 附件</button>
                                     <button type="button" class="btn btn-danger  " v-on:click="showDeleteDialog(item.id,item.name) "><i class="fa fa-trash-o"></i> 删除</button>
                                 </td>
@@ -221,7 +221,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label class="col-sm-2 control-label no-padding-right">设计单位<span class="red">*</span></label>
+                                        <label class="col-sm-2 control-label no-padding-right">监理单位<span class="red">*</span></label>
                                         <div class="col-sm-10">
                                             <div class="input-group">
                                                 <input type="text" class="form-control" readonly="readonly" id="unit" name="unit" v-model="item.unitName" v-validate:unit="{required:true}"/>
@@ -277,7 +277,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <label class="col-sm-2 control-label no-padding-right">合同设计费<span class="red">*</span></label>
+                                        <label class="col-sm-2 control-label no-padding-right">监理费<span class="red">*</span></label>
                                         <div class="col-sm-10">
                                             <div class="input-group">
                                                 <input type="number" class="form-control" id="price" name="price" v-model="item.price" v-validate:price="{required:true}" :disabled='item.status!==1'/>
@@ -429,4 +429,4 @@
     </div>
 </div>
 <script src="~/assets/js/liteuploader.js"></script>
-<script src="~/Views/ProcessManagement/designManage.js"></script>
+<script src="~/Views/ProcessManagement/supervisionManage.js"></script>
