--- a/TAF.Web/Views/BiddingManagement/_BiddingManagementIndex.cshtml
+++ b/TAF.Web/Views/BiddingManagement/_BiddingManagementIndex.cshtml
@@ -94,6 +94,7 @@
                                 <td>
                                     <button type="button" class="btn   edit" v-on:click="showModifyDialog('编辑招标文件',item.id)"><i class="fa fa-edit"></i> 编辑</button>
                                     <button type="button" class="btn   edit" v-on:click="showModifyTendererDialog(item.id)"><i class="fa fa-edit"></i> 投标单位</button>
+                                    <button type="button" class="btn btn-default  " v-on:click="showAttachmentsDialog('附件管理',item.id) "><i class="fa  fa-paperclip"></i> 附件</button>
                                     <button type="button" class="btn btn-danger  " v-on:click="showDeleteDialog(item.id,item.name) "><i class="fa fa-trash-o"></i> 删除</button>
                                 </td>
                             </tr>
@@ -116,6 +117,49 @@
                         </table>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!--上传附件-->
+<div class="bootbox modal fade modal-primary in" id="attachmentsDialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title">{{ modifyEntity.modifyTitle }}</h4>
+                <div v-model="title"></div>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label no-padding-right">上传<span class="red">*</span></label>
+                            <div class="col-sm-10">
+                                <input type="file" name="fileUpload" id="fileUpload" class="fileUpload" title="上传附件"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <table class="table table-striped table-hover table-bordered ">
+                            <tbody>
+                            <tr v-for="o in list4">
+                                <td><a href="/app_data/attachment/{{o.item3}}" >{{o.value}}</a></td>
+                                <td>
+
+                                    <button type="button" class="btn   edit" v-on:click="removeAttach(o.key)"><i class="fa  fa-trash-o"></i> 删除</button>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
             </div>
         </div>
     </div>
@@ -177,10 +221,10 @@
                                     <div v-show="!s.editStatus">{{s.name}}</div>
                                 </td>
                                 <td>
-                                    <button type="button" class="btn   edit" v-on:click="saveTenderer(s)" v-show="s.editStatus && item.hasPrint"><i class="fa fa-floppy-o"></i>保存 </button>
-                                    <button type="button" class="btn   edit" v-on:click="cancelTenderer(s)" v-show="s.editStatus && item.hasPrint"><i class="fa fa-mail-reply"></i>取消 </button>
-                                    <button type="button" class="btn   edit" v-on:click="editTenderer(s)" v-show="!s.editStatus && item.hasPrint"><i class="fa fa-edit"></i> 编辑</button>
-                                    <button type="button" class="btn btn-danger  " v-on:click="deleteTenderer($index) " v-show="!s.editStatus && item.hasPrint"><i class="fa fa-trash-o"></i>删除 </button>
+                                    <button type="button" class="btn   edit" v-on:click="saveTenderer(s)" v-show="s.editStatus && item.hasPrint==1"><i class="fa fa-floppy-o"></i>保存 </button>
+                                    <button type="button" class="btn   edit" v-on:click="cancelTenderer(s)" v-show="s.editStatus && item.hasPrint==1"><i class="fa fa-mail-reply"></i>取消 </button>
+                                    <button type="button" class="btn   edit" v-on:click="editTenderer(s)" v-show="!s.editStatus && item.hasPrint==1"><i class="fa fa-edit"></i> 编辑</button>
+                                    <button type="button" class="btn btn-danger  " v-on:click="deleteTenderer($index) " v-show="!s.editStatus && item.hasPrint==1"><i class="fa fa-trash-o"></i>删除 </button>
                                 </td>
                             </tr>
                             </tbody>
@@ -190,8 +234,8 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal"><i class='fa   fa-mail-reply'></i>取消</button>
-                <button type="button" class="btn btn-default" v-on:click="addTenderer()" v-show="item.hasPrint"><i class='fa   fa fa-plus'></i>新增投标单位</button>
-                <button type="submit" class="btn btn-primary" v-on:click="saveTenderers()" v-show="item.hasPrint"><i class='fa    fa-floppy-o'></i>保存 </button>
+                <button type="button" class="btn btn-default" v-on:click="addTenderer()" v-show="item.hasPrint==1"><i class='fa   fa fa-plus'></i>新增投标单位</button>
+                <button type="submit" class="btn btn-primary" v-on:click="saveTenderers()" v-show="item.hasPrint==1"><i class='fa    fa-floppy-o'></i>保存 </button>
             </div>
         </div>
     </div>
@@ -216,7 +260,7 @@
         <div class="form-group">
             <label class="col-sm-4 control-label no-padding-right">采购计划<span class="red">*</span></label>
             <div class="col-sm-8">
-                <select id="editplanId" style="width: 100%" v-model="item.planId" name="planId" :disabled='item.hasPrint' v-validate:planId="{required:true}">
+                <select id="editplanId" style="width: 100%" v-model="item.planId" name="planId" :disabled='item.hasPrint>0' v-validate:planId="{required:true}">
                     <option value="">请选择...</option>
                     @{
                         foreach (var item in (List<TAF.Utility.KeyValue<Guid, string>>) ViewData["list2"])
@@ -234,7 +278,7 @@
         <div class="form-group">
             <label class="col-sm-4 control-label no-padding-right">招标代理机构<span class="red">*</span></label>
             <div class="col-sm-8">
-                <select id="editbiddingAgencyId" style="width: 100%" v-model="item.biddingAgencyId" :disabled='item.hasPrint' name="biddingAgencyId" v-validate:biddingAgencyId="{required:true}">
+                <select id="editbiddingAgencyId" style="width: 100%" v-model="item.biddingAgencyId" :disabled='item.hasPrint>0' name="biddingAgencyId" v-validate:biddingAgencyId="{required:true}">
                     <option value="">请选择...</option>
                     @{
                         foreach (var item in (List<SysDictionaryListDto>) ViewData["list1"])
@@ -255,7 +299,7 @@
                 <div class="input-group">
                     <input type="text" class="form-control" readonly="readonly" id="expertName" name="expertName" v-model="item.expertName" v-validate:expertName="{required:true}"/>
                     <span class="input-group-btn">
-                        <button class="btn btn-primary" type="button" v-on:click="getExpert()" :disabled='item.hasPrint'>随机抽取</button>
+                        <button class="btn btn-primary" type="button" v-on:click="getExpert()" :disabled='item.hasPrint>0'>随机抽取</button>
                     </span>
                 </div>
 
@@ -272,7 +316,7 @@
             <label class="col-sm-4 control-label no-padding-right">招标时间<span class="red">*</span></label>
             <div class="col-sm-8">
                 <span class="input-icon icon-right">
-                    <input class="form-control  " placeholder="必填" type="text" id="datePickerDate" :disabled='item.hasPrint' readonly="readonly" v-model="item.date" name="date" v-validate:date="{required:true,dateTime:true}">
+                    <input class="form-control  " placeholder="必填" type="text" id="datePickerDate" :disabled='item.hasPrint>0' readonly="readonly" v-model="item.date" name="date" v-validate:date="{required:true,dateTime:true}">
                     <i class="fa fa-calendar"></i>
                 </span>
             </div>
@@ -285,7 +329,7 @@
             <label class="col-sm-4 control-label no-padding-right">文件发售时间起<span class="red">*</span></label>
             <div class="col-sm-8">
                 <span class="input-icon icon-right">
-                    <input class="form-control  " placeholder="必填" type="text" id="datePickerPlanDateFrom" :disabled='item.hasPrint' readonly="readonly" v-model="item.planDateFrom" name="plandatefrom" v-validate:plandatefrom="{required:true,dateTime:true}">
+                    <input class="form-control  " placeholder="必填" type="text" id="datePickerPlanDateFrom" :disabled='item.hasPrint>0' readonly="readonly" v-model="item.planDateFrom" name="plandatefrom" v-validate:plandatefrom="{required:true,dateTime:true}">
                     <i class="fa fa-calendar"></i>
                 </span>
             </div>
@@ -298,7 +342,7 @@
             <label class="col-sm-4 control-label no-padding-right">文件发售时间止<span class="red">*</span></label>
             <div class="col-sm-8">
                 <span class="input-icon icon-right">
-                    <input class="form-control  " placeholder="必填" type="text" id="datePickerPlanDateTo" readonly="readonly" :disabled='item.hasPrint' v-model="item.planDateTo" name="plandateto" v-validate:plandateto="{required:true,dateTime:true}">
+                    <input class="form-control  " placeholder="必填" type="text" id="datePickerPlanDateTo" readonly="readonly" :disabled='item.hasPrint>0' v-model="item.planDateTo" name="plandateto" v-validate:plandateto="{required:true,dateTime:true}">
                     <i class="fa fa-calendar"></i>
                 </span>
             </div>
@@ -311,7 +355,7 @@
             <label class="col-sm-4 control-label no-padding-right">投标截至时间<span class="red">*</span></label>
             <div class="col-sm-8">
                 <span class="input-icon icon-right">
-                    <input class="form-control  " placeholder="必填" type="text" id="datePickerPlanDateEnd" readonly="readonly" :disabled='item.hasPrint' v-model="item.planDateEnd" name="plandateend" v-validate:plandateend="{required:true,dateTime:true}">
+                    <input class="form-control  " placeholder="必填" type="text" id="datePickerPlanDateEnd" readonly="readonly" :disabled='item.hasPrint>0' v-model="item.planDateEnd" name="plandateend" v-validate:plandateend="{required:true,dateTime:true}">
                     <i class="fa fa-calendar"></i>
                 </span>
             </div>
@@ -323,7 +367,7 @@
         <div class="form-group">
             <label class="col-sm-4 control-label no-padding-right">项目最高造价<span class="red">*</span></label>
             <div class="col-sm-8">
-                <input type="number" class="form-control" placeholder="必填" id="total" name="total" v-model="item.total" :disabled='item.hasPrint' v-validate:total="{number:true}"/>
+                <input type="number" class="form-control" placeholder="必填" id="total" name="total" v-model="item.total" :disabled='item.hasPrint>0' v-validate:total="{number:true}"/>
             </div>
         </div>
     </div>
@@ -333,7 +377,7 @@
         <div class="form-group">
             <label class="col-sm-4 control-label no-padding-right">工期<span class="red">*</span></label>
             <div class="col-sm-8">
-                <input type="number" class="form-control" placeholder="必填" id="schedule" name="schedule" v-model="item.schedule" :disabled='item.hasPrint' v-validate:schedule="{int:true}"/>
+                <input type="number" class="form-control" placeholder="必填" id="schedule" name="schedule" v-model="item.schedule" :disabled='item.hasPrint>0' v-validate:schedule="{int:true}"/>
             </div>
         </div>
     </div>
@@ -396,12 +440,12 @@
                     <div v-show="!r.editStatus">{{r.amount}}</div>
                 </td>
                 <td>
-                    <button type="button" class="btn   edit" v-on:click="saveItem(r)" v-show="r.editStatus && !item.hasPrint"><i class="fa fa-floppy-o"></i></button>
-                    <button type="button" class="btn   edit" v-on:click="cancelItem(r)" v-show="r.editStatus && !item.hasPrint"><i class="fa fa-mail-reply"></i> </button>
-                    <button type="button" class="btn   edit" v-on:click="editItem(r)" v-show="!r.editStatus && !item.hasPrint">
+                    <button type="button" class="btn   edit" v-on:click="saveItem(r)" v-show="r.editStatus && !item.hasPrint>0"><i class="fa fa-floppy-o"></i></button>
+                    <button type="button" class="btn   edit" v-on:click="cancelItem(r)" v-show="r.editStatus && !item.hasPrint>0"><i class="fa fa-mail-reply"></i> </button>
+                    <button type="button" class="btn   edit" v-on:click="editItem(r)" v-show="!r.editStatus && !item.hasPrint>0">
                         <i class="fa fa-edit"></i>
                     </button>
-                    <button type="button" class="btn btn-danger  " v-on:click="deleteItem($index) " v-show="!r.editStatus && !item.hasPrint">
+                    <button type="button" class="btn btn-danger  " v-on:click="deleteItem($index) " v-show="!r.editStatus && !item.hasPrint>0">
                         <i class="fa fa-trash-o"></i>
                     </button>
                 </td>
@@ -416,13 +460,13 @@
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal"><i class='fa   fa-mail-reply'></i>取消</button>
-    <button type="button" class="btn btn-default" v-on:click="addDetail()" v-show="!item.hasPrint"><i class='fa   fa fa-plus'></i>新增清单</button>
-    <button type="submit" class="btn btn-primary" v-on:click="save()" v-show="!item.hasPrint" disabled="{{!$v.valid }}"><i class='fa    fa-floppy-o'></i>保存 </button>
+    <button type="button" class="btn btn-default" v-on:click="addDetail()" v-show="!item.hasPrint>0"><i class='fa   fa fa-plus'></i>新增清单</button>
+    <button type="submit" class="btn btn-primary" v-on:click="save()" v-show="!item.hasPrint>0" disabled="{{!$v.valid }}"><i class='fa    fa-floppy-o'></i>保存 </button>
     <button type="submit" class="btn btn-primary" v-on:click="export()" disabled="{{!$v.valid}}"><i class='fa    fa    fa-print'></i>导出招标文件 </button>
 </div>
 </div>
 </div>
 </div>
 
-
+<script src="~/assets/js/liteuploader.js"></script>
 <script src="~/Views/BiddingManagement/biddingManagement.js"></script>
