--- a/TAF.Web/Views/BidOpeningManagement/_BidOpeningManagementIndex.cshtml
+++ b/TAF.Web/Views/BidOpeningManagement/_BidOpeningManagementIndex.cshtml
@@ -30,6 +30,9 @@
                                     <th style="width: 200px;">
                                         中标单位
                                     </th>
+                                    <th style="width: 200px;">
+                                        合同金额
+                                    </th>
                                     <th style="width: 250px;">
                                         操作
                                     </th>
@@ -66,6 +69,8 @@
                                         <input type="text" class="form-control" placeholder="中标单位" v-model="queryEntity.successfulTender" />
                                     </th>
                                     <th>
+                                    </th>
+                                    <th>
                                         <button type="button" class="btn edit" v-on:click="query(0)"><i class="fa fa-search"></i> 搜索</button>
                                         <button type="button" class="btn edit" v-on:click="resetSearch()"><i class="fa fa-times"></i> 重置</button>
                                     </th>
@@ -78,6 +83,7 @@
                                     <td>{{item.mode}}</td>
                                     <td>{{item.name}}</td>
                                     <td>{{item.successfulTender}}</td>
+                                    <td>{{item.price}}</td>
                                     <td>
                                         <button type="button" class="btn   edit" v-on:click="showModifyDialog('编辑开标',item.id)"><i class="fa fa-edit"></i> 编辑</button>
                                         <button type="button" class="btn btn-default  " v-on:click="showAttachmentsDialog('附件管理',item.id) "><i class="fa  fa-paperclip"></i> 附件</button>
@@ -189,7 +195,7 @@
                                     <div class="form-group">
                                         <label class="col-sm-2 control-label no-padding-right">采购计划<span class="red">*</span></label>
                                         <div class="col-sm-10">
-                                            <select id="editPlanId" style="width: 100%" v-model="item.planId" name="planid" v-validate:planid="{required:true}">
+                                            <select id="editPlanId" style="width: 100%" v-model="item.planId" name="planid" v-validate:planid="{required:true}" :disabled='item.hasPrint>0'>
                                                 <option value="">请选择...</option>
                                                 @{
                                                     foreach (var item in (List<TAF.Utility.KeyValue<Guid, string>>)ViewData["list1"])
@@ -228,11 +234,21 @@
                                         <div class="col-sm-10">
                                             <div class="checkbox" v-for="tender in tenders">
                                                 <label for="{{tender}}">
-                                                    <input type="checkbox" :value="tender" v-model="item.successfulTender" name="{{tender}}" id="{{tender}}">
+                                                    <input type="checkbox" :value="tender" v-model="item.successfulTender" name="{{tender}}" id="{{tender}}" :disabled='item.hasPrint>0'>
                                                     <span class=" text">
                                                         {{tender}}</span>
                                                 </label>
                                             </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label no-padding-right">中标价格<span class="red">*</span></label>
+                                        <div class="col-sm-10">
+                                            <input type="number" class="form-control" placeholder="必填" id="price" name="price" v-model="item.price" :disabled='item.hasPrint>0' v-validate:price="{number:true}"/>
                                         </div>
                                     </div>
                                 </div>
@@ -243,11 +259,10 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal"><i class='fa   fa-mail-reply'></i>取消</button>
-                <button type="submit" class="btn btn-primary" v-on:click="save()" v-show="!item.hasPrint>0" disabled="{{!$v.valid }}"><i class='fa    fa-floppy-o'></i>保存 </button>
-                                                        <button type="submit" class="btn btn-primary" v-on:click="export()" disabled="{{!$v.valid}}"><i class='fa    fa    fa-print'></i>废标 </button>
-                                                        <button type="submit" class="btn btn-primary" v-on:click="export()" disabled="{{!$v.valid}}"><i class='fa    fa    fa-print'></i>中标通知 </button>
-                                                        <button type="submit" class="btn btn-primary" v-on:click="export()" disabled="{{!$v.valid}}"><i class='fa    fa    fa-print'></i>生成报告 </button>
-                                                        <button type="submit" class="btn btn-primary" v-on:click="export()" disabled="{{!$v.valid}}"><i class='fa    fa    fa-print'></i>公示 </button>
+                <button type="submit" class="btn btn-primary" v-on:click="save()" v-show="!item.hasPrint>0" :disabled='item.hasPrint>0 || !$v.valid'><i class='fa    fa-floppy-o'></i>保存 </button>
+                                                        <button type="submit" class="btn btn-primary" v-on:click="export()" :disabled='item.hasPrint>0 || !$v.valid'><i class='fa    fa    fa-print'></i>废标 </button>
+                                                        <button type="submit" class="btn btn-primary" v-on:click="export2()" :disabled='item.hasPrint>0 || !$v.valid'><i class='fa    fa    fa-print'></i>中标通知 </button>
+                                                        <button type="submit" class="btn btn-primary" v-on:click="export3()" :disabled='!$v.valid'><i class='fa    fa    fa-print'></i>生成报告 </button>
 </div>
         </div>
     </div>
