--- a/TAF.Web/Views/BidOpeningManagement/_BidOpeningManagementIndex.cshtml
+++ b/TAF.Web/Views/BidOpeningManagement/_BidOpeningManagementIndex.cshtml
@@ -30,10 +30,10 @@
                                     <th style="width: 200px;">
                                         中标单位
                                     </th>
-                                    <th style="width: 200px;">
+                                    <th style="width: 100px;">
                                         合同金额
                                     </th>
-                                    <th style="width: 250px;">
+                                    <th style="width: 300px;">
                                         操作
                                     </th>
                                 </tr>
@@ -86,6 +86,7 @@
                                     <td>{{item.price}}</td>
                                     <td>
                                         <button type="button" class="btn   edit" v-on:click="showModifyDialog('编辑开标',item.id)"><i class="fa fa-edit"></i> 编辑</button>
+                                        <button type="button" class="btn   edit" v-on:click="showModifyPerformanceDialog('编辑履约保证金',item.planId)"><i class="fa fa-edit"></i> 履约保证金</button>
                                         <button type="button" class="btn btn-default  " v-on:click="showAttachmentsDialog('附件管理',item.id) "><i class="fa  fa-paperclip"></i> 附件</button>
                                         <button type="button" class="btn btn-danger  " v-on:click="showDeleteDialog(item.id,item.name) "><i class="fa fa-trash-o"></i> 删除</button>
                                     </td>
@@ -236,7 +237,8 @@
                                                 <label for="{{tender}}">
                                                     <input type="checkbox" :value="tender" v-model="item.successfulTender" name="{{tender}}" id="{{tender}}" :disabled='item.hasPrint>0'>
                                                     <span class=" text">
-                                                        {{tender}}</span>
+                                                        {{tender}}
+                                                    </span>
                                                 </label>
                                             </div>
                                         </div>
@@ -248,7 +250,20 @@
                                     <div class="form-group">
                                         <label class="col-sm-2 control-label no-padding-right">中标价格<span class="red">*</span></label>
                                         <div class="col-sm-10">
-                                            <input type="number" class="form-control" placeholder="必填" id="price" name="price" v-model="item.price" :disabled='item.hasPrint>0' v-validate:price="{number:true}"/>
+                                            <input type="number" class="form-control" placeholder="必填" id="price" name="price" v-model="item.price" :disabled='item.hasPrint>0' v-validate:price="{number:true}" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label class="col-sm-2 control-label no-padding-right">中标时间<span class="red">*</span></label>
+                                        <div class="col-sm-10">
+                                            <span class="input-icon icon-right">
+                                                <input class="form-control  " placeholder="必填" type="text" id="datePickerDate" readonly="readonly" :disabled='item.hasPrint>0' v-model="item.date" name="date" v-validate:date="{required:true,dateTime:true}">
+                                                <i class="fa fa-calendar"></i>
+                                            </span>
                                         </div>
                                     </div>
                                 </div>
@@ -260,10 +275,140 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal"><i class='fa   fa-mail-reply'></i>取消</button>
                 <button type="submit" class="btn btn-primary" v-on:click="save()" v-show="!item.hasPrint>0" :disabled='item.hasPrint>0 || !$v.valid'><i class='fa    fa-floppy-o'></i>保存 </button>
-                                                        <button type="submit" class="btn btn-primary" v-on:click="export()" :disabled='item.hasPrint>0 || !$v.valid'><i class='fa    fa    fa-print'></i>废标 </button>
-                                                        <button type="submit" class="btn btn-primary" v-on:click="export2()" :disabled='item.hasPrint>0 || !$v.valid'><i class='fa    fa    fa-print'></i>中标通知 </button>
-                                                        <button type="submit" class="btn btn-primary" v-on:click="export3()" :disabled='!$v.valid'><i class='fa    fa    fa-print'></i>生成报告 </button>
+                <button type="submit" class="btn btn-primary" v-on:click="export()" :disabled='item.hasPrint>0 || !$v.valid'><i class='fa    fa    fa-print'></i>废标 </button>
+                <button type="submit" class="btn btn-primary" v-on:click="export2()" :disabled='item.hasPrint>0 || !$v.valid'><i class='fa    fa    fa-print'></i>中标通知 </button>
+                <button type="submit" class="btn btn-primary" v-on:click="export3()" :disabled='!$v.valid'><i class='fa    fa    fa-print'></i>生成报告 </button>
+            </div>
+        </div>
+    </div>
 </div>
+
+<!-- 编辑履约保证金对话框 -->
+<div class="bootbox modal fade modal-primary in" id="modifyPerformanceDialog" >
+    <div class="modal-dialog">
+        <div class="modal-content" style="width: 900px">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title">{{ modifyEntity.modifyTitle }}</h4>
+                <div v-model="title"></div>
+            </div>
+            <div class="modal-body">
+                <div id="form">
+                    <validator name="v2">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label no-padding-right">金额<span class="red">*</span></label>
+                                    <div class="col-sm-9">
+                                        <input type="number" class="form-control" placeholder="必填" id="marginAmount" name="marginAmount" v-model="performanceItem.marginAmount" :disabled='performanceItem.hasPrint>0' v2-validate:marginAmount="{number:true}" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label no-padding-right">保证金缴纳日期<span class="red">*</span></label>
+                                    <div class="col-sm-9">
+                                        <span class="input-icon icon-right">
+                                            <input class="form-control  " placeholder="必填" type="text" id="datePickerDate2" readonly="readonly" :disabled='performanceItem.hasPrint>0' v-model="performanceItem.date" name="date2" v2-validate:date2="{required:true,dateTime:true}">
+                                            <i class="fa fa-calendar"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>   
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label no-padding-right">保证金扣除</label>
+                                    <div class="col-sm-9">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <table class="table table-striped table-hover table-bordered ">
+                                    <thead>
+                                        <tr role="row">
+                                            <th style="width: 50px;">
+                                                序号
+                                            </th>
+                                            <th style="width: 80px;">
+                                                金额
+                                            </th>
+                                            <th style="width: 150px;">
+                                                情况说明
+                                            </th>
+                                            <th style="width: 70px;">
+                                                部门
+                                            </th>
+                                            <th style="width: 70px;">
+                                                联系人
+                                            </th>
+                                            <th style="width: 80px;">
+                                                联系电话
+                                            </th>
+                                            <th style="width: 200px;">
+                                                操作
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr v-for="s in performanceAmountDetails">
+                                            <td>{{$index+1}}</td>
+                                            <td>
+                                                <div v-show="s.editStatus">
+                                                    <input class="form-control  " placeholder="金额" type="number" v-model="s.amount">
+                                                </div>
+                                                <div v-show="!s.editStatus">{{s.amount}}</div>
+                                            </td>
+                                            <td>
+                                                <div v-show="s.editStatus">
+                                                    <input class="form-control  " placeholder="情况说明" type="text" v-model="s.note">
+                                                </div>
+                                                <div v-show="!s.editStatus">{{s.note}}</div>
+                                            </td>
+                                            <td>
+                                                <div v-show="s.editStatus">
+                                                    <input class="form-control  " placeholder="部门" type="text" v-model="s.department">
+                                                </div>
+                                                <div v-show="!s.editStatus">{{s.department}}</div>
+                                            </td>
+                                            <td>
+                                                <div v-show="s.editStatus">
+                                                    <input class="form-control  " placeholder="联系人" type="text" v-model="s.user">
+                                                </div>
+                                                <div v-show="!s.editStatus">{{s.user}}</div>
+                                            </td>
+                                            <td>
+                                                <div v-show="s.editStatus">
+                                                    <input class="form-control  " placeholder="联系电话" type="text" v-model="s.phone">
+                                                </div>
+                                                <div v-show="!s.editStatus">{{s.phone}}</div>
+                                            </td>
+                                            <td>
+                                                <button type="button" class="btn   edit" v-on:click="saveDetail(s)" v-show="s.editStatus && performanceItem.hasPrint<=1"><i class="fa fa-floppy-o"></i>保存 </button>
+                                                <button type="button" class="btn   edit" v-on:click="cancelDetail(s)" v-show="s.editStatus && performanceItem.hasPrint<=1"><i class="fa fa-mail-reply"></i>取消 </button>
+                                                <button type="button" class="btn   edit" v-on:click="editDetail(s)" v-show="!s.editStatus && performanceItem.hasPrint<=1"><i class="fa fa-edit"></i> 编辑</button>
+                                                <button type="button" class="btn edit" v-on:click="export4(s.id) " v-show="!s.editStatus && performanceItem.hasPrint<=1"><i class="fa  fa-print"></i>扣除通知 </button>
+                                                <button type="button" class="btn btn-danger  " v-on:click=" deleteDetail(s.id)" v-show="!s.editStatus && performanceItem.hasPrint<=1"><i class="fa fa-trash-o"></i>删除 </button>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        </form>
+                    </validator>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal"><i class='fa   fa-mail-reply'></i>取消</button>
+                <button type="submit" class="btn btn-primary" v-on:click="save2()" v-show="!performanceItem.hasPrint>0" :disabled='performanceItem.hasPrint==2|| !$v2.valid'><i class='fa    fa-floppy-o'></i>保存 </button>
+                <button type="submit" class="btn btn-primary" v-on:click="addDetail()" :disabled='performanceItem.hasPrint==2|| !$v2.valid'><i class='fa fa-plus'></i>保证金扣除 </button>
+            </div>
         </div>
     </div>
 </div>
