--- a/TAF.Web/Views/ProjectManagement/_ProjectManagementIndex.cshtml
+++ b/TAF.Web/Views/ProjectManagement/_ProjectManagementIndex.cshtml
@@ -7,6 +7,7 @@
             <div class="widget-body">
                 <div class="table-toolbar">
                     <button type="button" class="btn btn-primary " v-on:click="showModifyDialog('新增采购过程管理',null)"><i class="fa  fa-plus"></i> 新增</button>
+                    <button type="submit" class="btn btn-primary" v-on:click="export()" ><i class='fa    fa    fa-print'></i>生成报告 </button>
                 </div>
                 <div class="row">
                     <div class="col-md-12 ">
